--- a/packages/ai-chat-plug/index.html
+++ b/packages/ai-chat-plug/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>AI Chat</title>
+    <style>
+      body {
+        margin: 0;
+        width: 400px;
+        height: 600px;
+        overflow: hidden;
+      }
+      #popup-root {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <div id="popup-root"></div>
+    <script type="module" src="./src/pages/popup/index.tsx"></script>
   </body>
 </html>
